12Ingress/path_based/inginxdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mahesh-deploy 
  labels:
    role: web
spec:
  replicas: 3
  selector:
    matchLabels:
      role: web 
  template:
    metadata:
      labels:
        role: web
    spec:
      containers:
      - name: mahesh-container 
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mahesh-service 
  labels:
    app: nani 
spec:
  selector:
    role: web
  ports:
  - port: 8280
    targetPort: 80
